--- a/FonSpa/FonSpa/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/FonSpa/FonSpa/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -38,8 +38,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <header class="header fixed-top clearfix">
             <!--logo start-->
             <div class="brand">
-                <a href="index.html" class="logo">
-                    VISITORS
+                <a href="/Admin/HomeAdmin" class="logo">
+                    LABORE
                 </a>
                 <div class="sidebar-toggle-box">
                     <div class="fa fa-bars"></div>
@@ -48,7 +48,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <!--logo end-->
             <div class="nav notify-row" id="top_menu">
                 <!--  notification start -->
-                <ul class="nav top-menu">
+                @*<ul class="nav top-menu">
                     <!-- settings start -->
                     <li class="dropdown">
                         <a data-toggle="dropdown" class="dropdown-toggle" href="#">
@@ -221,15 +221,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         </ul>
                     </li>
                     <!-- notification dropdown end -->
-                </ul>
+                </ul>*@
                 <!--  notification end -->
             </div>
             <div class="top-nav clearfix">
                 <!--search & user info start-->
                 <ul class="nav pull-right top-menu">
-                    <li>
+                    @*<li>
                         <input type="text" class="form-control search" placeholder=" Search">
-                    </li>
+                    </li>*@
                     <!-- user login dropdown start-->
                     <li class="dropdown">
                         <a data-toggle="dropdown" class="dropdown-toggle" href="#">
