--- a/FonSpa/FonSpa/Areas/Admin/Views/CustomerAdmin/Edit.cshtml
+++ b/FonSpa/FonSpa/Areas/Admin/Views/CustomerAdmin/Edit.cshtml
@@ -5,25 +5,6 @@
 
 }
 
-@section jsFooter{
-    <script>
-        $('#btnSelectImage').on('click', function (e) {
-            e.preventDefault();
-            var finder = new CKFinder();
-            finder.selectActionFunction = function (url) {
-                $('#txtImage').val(url);
-            };
-            finder.popup();
-        })
-
-        var editor = CKEDITOR.replace('txtcontent', {
-            customConfig: '~/Assets/js/Plugin/ckeditor/config.js',
-        });
-
-        CKFinder.setupCKEditor(null, '/Assets/js/Plugin/ckfinder');
-
-    </script>
-}
 
 <section class="wrapper">
     <div class="form-w3layouts">
@@ -48,15 +29,8 @@
                                     <label class="control-label col-lg-3">UserName</label>
                                     <div class="col-lg-6">
                                         @*<input class="form-control " id="username" name="username" type="text">*@
-                                        @Html.ValidationMessageFor(model => model.userName, "", new { @class = "text-danger" })
-                                        @Html.EditorFor(model => model.userName, new { htmlAttributes = new { @class = "form-control", @type = "text" } })
-                                    </div>
-                                </div>
-                                <div class="form-group ">
-                                    <label for="password" class="control-label col-lg-3">Password</label>
-                                    <div class="col-lg-6">
-                                        @Html.ValidationMessageFor(model => model.passWord, "", new { @class = "text-danger" })
-                                        @Html.EditorFor(model => model.passWord, new { htmlAttributes = new { @class = "form-control", @id = "password", @type = "password" } })
+                                        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @type = "text" } })
                                     </div>
                                 </div>
                                 <div class="form-group ">
@@ -81,12 +55,6 @@
                                         @*<input class="form-control " id="username" name="username" type="text">*@
                                         @Html.ValidationMessageFor(model => model.address, "", new { @class = "text-danger" })
                                         @Html.EditorFor(model => model.address, new { htmlAttributes = new { @class = "form-control", @type = "text " } })
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label class="control-label col-lg-3">Member</label>
-                                    <div class="col-lg-6">
-                                        @Html.DropDownListFor(model => model.typeMember, new[] { new SelectListItem { Text = "New Member", Value = "0" }, new SelectListItem { Text = "Silver", Value = "1" }, new SelectListItem { Text = "Gold", Value = "2" }, new SelectListItem { Text = "Diamond", Value = "3" } }, new { @class = "form-control m-bot15" })
                                     </div>
                                 </div>
                                 <div class="form-group">
