--- a/FonSpa/FonSpa/Areas/Admin/Views/ServicesAdmin/Edit.cshtml
+++ b/FonSpa/FonSpa/Areas/Admin/Views/ServicesAdmin/Edit.cshtml
@@ -1,9 +1,9 @@
-﻿@model Models.Entity.Product
+﻿@model Models.Entity.Service
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
-    List<Models.Entity.ProductCategory> listCategory = ViewBag.ProductCategory;
-    
+    List<Models.Entity.ServiceCategory> listCategory = ViewBag.SerivcesCategory;
+
 }
 
 @section jsFooter{
@@ -32,7 +32,7 @@
             <div class="col-lg-12">
                 <section class="panel">
                     <header class="panel-heading">
-                        Create New Product
+                        Create New Services
                         <span class="tools pull-right">
                         </span>
                     </header>
@@ -42,11 +42,11 @@
                             @*<div class="form">*@
 
                             @*<form  method="get" action="" novalidate="novalidate">*@
-                            @using (Html.BeginForm("Create", "ProductAdmin", FormMethod.Post, new { @class = "cmxform form-horizontal", @id = "signupForm" }))
+                            @using (Html.BeginForm("Edit", "ServicesAdmin", FormMethod.Post, new { @class = "cmxform form-horizontal", @id = "signupForm" }))
                             {
                                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                                 <div class="form-group ">
-                                    <label class="control-label col-lg-3">Product Name</label>
+                                    <label class="control-label col-lg-3">Services Name</label>
                                     <div class="col-lg-6">
                                         @*<input class="form-control " id="username" name="username" type="text">*@
                                         @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
@@ -120,7 +120,6 @@
                                         @Html.ValidationMessageFor(model => model.detail, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
-
 
                                 <div class="form-group">
                                     <label class="control-label col-lg-3">Status</label>
