--- a/FonSpa/FonSpa/Areas/Admin/Views/Shared/_sidebar.cshtml
+++ b/FonSpa/FonSpa/Areas/Admin/Views/Shared/_sidebar.cshtml
@@ -4,7 +4,7 @@
         <div class="leftside-navigation">
             <ul class="sidebar-menu" id="nav-accordion">
                 <li>
-                    <a class="active" href="index.html">
+                    <a class="active" href="/Admin/HomeAdmin">
                         <i class="fa fa-dashboard"></i>
                         <span>Dashboard</span>
                     </a>
