--- a/FonSpa/FonSpa/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/FonSpa/FonSpa/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -310,22 +310,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 lineWidth: 0,
                 fillOpacity: 0.85,
                 data: [
-                    { period: '2015 Q1', iphone: 2668, ipad: null, itouch: 2649 },
-                    { period: '2015 Q2', iphone: 15780, ipad: 13799, itouch: 12051 },
-                    { period: '2015 Q3', iphone: 12920, ipad: 10975, itouch: 9910 },
-                    { period: '2015 Q4', iphone: 8770, ipad: 6600, itouch: 6695 },
-                    { period: '2016 Q1', iphone: 10820, ipad: 10924, itouch: 12300 },
-                    { period: '2016 Q2', iphone: 9680, ipad: 9010, itouch: 7891 },
-                    { period: '2016 Q3', iphone: 4830, ipad: 3805, itouch: 1598 },
-                    { period: '2016 Q4', iphone: 15083, ipad: 8977, itouch: 5185 },
-                    { period: '2017 Q1', iphone: 10697, ipad: 4470, itouch: 2038 },
+                    { month: '2019-01', book: 2200, customer: 2668, visitor: 2649 },
+                    { month: '2019-02', book: 1200, customer: 200, visitor: 2649 },
+                    { month: '2019-03', book: 1300, customer: 1300, visitor: 1300 },
+                    { month: '2019-04', book: 200, customer: 2668, visitor: 2649 },
+                    { month: '2019-05', book: 2600, customer: 2668, visitor: 2649 },
+                    { month: '2019-06', book: 2600, customer: 2668, visitor: 1300 },
+                    { month: '2019-07', book: 300, customer: 1300, visitor: 2649 },
+                    { month: '2019-08', book: 2668, customer: 2668, visitor: 2649 },
+                    { month: '2019-09', book: 200, customer: 200, visitor: 200 },
 
                 ],
-                lineColors: ['#eb6f6f', '#926383', '#eb6f6f'],
-                xkey: 'period',
+                lineColors: ['#a44e4e', '#926383', '#eb6f6f '],
+                xkey: 'month',
                 redraw: true,
-                ykeys: ['iphone', 'ipad', 'itouch'],
-                labels: ['All Visitors', 'Returning Visitors', 'Unique Visitors'],
+                ykeys: ['book', 'customer', 'visitor'],
+                labels: ['Order Total', 'Customer Total', 'Visitors Total'],
                 pointSize: 2,
                 hideHover: 'auto',
                 resize: true
