--- a/FonSpa/FonSpa/Areas/Admin/Views/ContentAdmin/Index.cshtml
+++ b/FonSpa/FonSpa/Areas/Admin/Views/ContentAdmin/Index.cshtml
@@ -15,7 +15,7 @@
     <div class="table-agile-info">
         <div class="panel panel-default">
             <div class="panel-heading">
-                List Content
+                List Blog
             </div>
             <div class="row w3-res-tb">
             </div>
@@ -24,7 +24,7 @@
                     <thead>
                         <tr>
                             <th>ID</th>
-                            <th>Content Name</th>
+                            <th>Blog Name</th>
                             <th>Category</th>
                             <th>Status</th>
                             <th>#</th>
