--- a/FonSpa/FonSpa/Areas/Admin/Views/ContentCategoryAdmin/Index.cshtml
+++ b/FonSpa/FonSpa/Areas/Admin/Views/ContentCategoryAdmin/Index.cshtml
@@ -12,7 +12,7 @@
     <div class="table-agile-info">
         <div class="panel panel-default">
             <div class="panel-heading">
-                List Content Category
+                List Blog Category
             </div>
             <div class="row w3-res-tb">
             </div>
