--- a/FonSpa/FonSpa/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/FonSpa/FonSpa/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -310,22 +310,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 lineWidth: 0,
                 fillOpacity: 0.85,
                 data: [
-                    { month: '2019-01', book: 2200, customer: 2668, visitor: 2649 },
-                    { month: '2019-02', book: 1200, customer: 200, visitor: 2649 },
-                    { month: '2019-03', book: 1300, customer: 1300, visitor: 1300 },
-                    { month: '2019-04', book: 200, customer: 2668, visitor: 2649 },
-                    { month: '2019-05', book: 2600, customer: 2668, visitor: 2649 },
-                    { month: '2019-06', book: 2600, customer: 2668, visitor: 1300 },
-                    { month: '2019-07', book: 300, customer: 1300, visitor: 2649 },
-                    { month: '2019-08', book: 2668, customer: 2668, visitor: 2649 },
-                    { month: '2019-09', book: 200, customer: 200, visitor: 200 },
+                    { month: '2019-01', booking: 2200, customer: 2668, visitor: 2649 },
+                    { month: '2019-02', booking: 1200, customer: 200, visitor: 2649 },
+                    { month: '2019-03', booking: 1300, customer: 1300, visitor: 1300 },
+                    { month: '2019-04', booking: 200, customer: 2668, visitor: 2649 },
+                    { month: '2019-05', booking: 2600, customer: 2668, visitor: 2649 },
+                    { month: '2019-06', booking: 2600, customer: 2668, visitor: 1300 },
+                    { month: '2019-07', booking: 300, customer: 1300, visitor: 2649 },
+                    { month: '2019-08', booking: 2668, customer: 2668, visitor: 2649 },
+                    { month: '2019-09', booking: 200, customer: 200, visitor: 200 },
 
                 ],
                 lineColors: ['#a44e4e', '#926383', '#eb6f6f '],
                 xkey: 'month',
                 redraw: true,
-                ykeys: ['book', 'customer', 'visitor'],
-                labels: ['Order Total', 'Customer Total', 'Visitors Total'],
+                ykeys: ['booking', 'customer', 'visitor'],
+                labels: ['Booking Total', 'Customer Total', 'Visitors Total'],
                 pointSize: 2,
                 hideHover: 'auto',
                 resize: true
