--- a/FonSpa/FonSpa/Areas/Admin/Views/Shared/_sidebar.cshtml
+++ b/FonSpa/FonSpa/Areas/Admin/Views/Shared/_sidebar.cshtml
@@ -47,13 +47,41 @@
                 <li>
                     <a href="fontawesome.html">
                         <i class="fa fa-pencil"></i>
-                        <span>Content </span>
+                        <span>Blog </span>
                     </a>
                     <ul class="sub">
-                        <li><a href="/Admin/ContentAdmin/Index">List Content</a></li>
-                        <li><a href="/Admin/ContentAdmin/Create">Add Content</a></li>
-                        <li><a href="/Admin/ContentCategoryAdmin/Index">List Content Category</a></li>
-                        <li><a href="/Admin/ContentCategoryAdmin/Create">Add Content Category</a></li>
+                        <li><a href="/Admin/ContentAdmin/Index">List Blog</a></li>
+                        <li><a href="/Admin/ContentAdmin/Create">Add Blog</a></li>
+                        <li><a href="/Admin/ContentCategoryAdmin/Index">List Blog Category</a></li>
+                        <li><a href="/Admin/ContentCategoryAdmin/Create">Add Blog Category</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="fontawesome.html">
+                        <i class="fa fa-reddit-square"></i>
+                        <span>Room & Bed</span>
+                    </a>
+                    <ul class="sub">
+                        <li>
+                            <a href="fontawesome.html">
+                                <i class="fa fa-android"></i>
+                                <span>Room</span>
+                            </a>
+                            <ul class="sub">
+                                <li><a href="/Admin/RoomAdmin/Index">List Room</a></li>
+                                <li><a href="/Admin/RoomAdmin/Create">Add Room</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="fontawesome.html">
+                                <i class="fa fa-apple"></i>
+                                <span>Bed</span>
+                            </a>
+                            <ul class="sub">
+                                <li><a href="/Admin/BedAdmin/Index">List Bed</a></li>
+                                <li><a href="/Admin/BedAdmin/Create">Add Bed</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
                 <li>
@@ -76,58 +104,58 @@
                 </li>
                 <li>
                     <a href="fontawesome.html">
-                        <i class="fa fa-book"></i>
-                        <span>Menu</span>
+                        <i class="fa fa-pencil-square"></i>
+                        <span>Page Content</span>
                     </a>
                     <ul class="sub">
-                        <li><a href="/Admin/MenuAdmin/Index">List Menu</a></li>
-                        <li><a href="/Admin/MenuAdmin/Create">Add Menu</a></li>
-                        <li><a href="/Admin/MenuTypeAdmin/Index">List Menu Type</a></li>
-                        <li><a href="/Admin/MenuTypeAdmin/Create">Add Menu Type</a></li>
+                        <li>
+                            <a href="fontawesome.html">
+                                <i class="fa fa-bookmark"></i>
+                                <span>About</span>
+                            </a>
+                            <ul class="sub">
+                                <li><a href="/Admin/AboutAdmin/Index">List About</a></li>
+                                <li><a href="/Admin/AboutAdmin/Create">Add About</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="fontawesome.html">
+                                <i class="fa fa-phone"></i>
+                                <span>Contact</span>
+                            </a>
+                            <ul class="sub">
+                                <li><a href="/Admin/ContactAdmin/Index">List Contact</a></li>
+                                <li><a href="/Admin/ContactAdmin/Create">Add Contact</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="fontawesome.html">
+                                <i class="fa fa-mercury"></i>
+                                <span>Footer</span>
+                            </a>
+                            <ul class="sub">
+                                <li><a href="/Admin/FooterAdmin/Index">List Footer</a></li>
+                                <li><a href="/Admin/FooterAdmin/Create">Add Footer</a></li>
+                                <li><a href="/Admin/FooterCategoryAdmin/Index">List Footer Category</a></li>
+                                <li><a href="/Admin/FooterCategoryAdmin/Create">Add Footer Category</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="fontawesome.html">
+                                <i class="fa fa-book"></i>
+                                <span>Menu</span>
+                            </a>
+                            <ul class="sub">
+                                <li><a href="/Admin/MenuAdmin/Index">List Menu</a></li>
+                                <li><a href="/Admin/MenuAdmin/Create">Add Menu</a></li>
+                                <li><a href="/Admin/MenuTypeAdmin/Index">List Menu Type</a></li>
+                                <li><a href="/Admin/MenuTypeAdmin/Create">Add Menu Type</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
-                <li>
-                    <a href="fontawesome.html">
-                        <i class="fa fa-mercury"></i>
-                        <span>Footer</span>
-                    </a>
-                    <ul class="sub">
-                        <li><a href="/Admin/FooterAdmin/Index">List Footer</a></li>
-                        <li><a href="/Admin/FooterAdmin/Create">Add Footer</a></li>
-                        <li><a href="/Admin/FooterCategoryAdmin/Index">List Footer Category</a></li>
-                        <li><a href="/Admin/FooterCategoryAdmin/Create">Add Footer Category</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="fontawesome.html">
-                        <i class="fa fa-phone"></i>
-                        <span>Contact</span>
-                    </a>
-                    <ul class="sub">
-                        <li><a href="/Admin/ContactAdmin/Index">List Contact</a></li>
-                        <li><a href="/Admin/ContactAdmin/Create">Add Contact</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="fontawesome.html">
-                        <i class="fa fa-image"></i>
-                        <span>Slide</span>
-                    </a>
-                    <ul class="sub">
-                        <li><a href="/Admin/SlideAdmin/Index">List Slide</a></li>
-                        <li><a href="/Admin/SlideAdmin/Create">Add Slide</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="fontawesome.html">
-                        <i class="fa fa-bookmark"></i>
-                        <span>About</span>
-                    </a>
-                    <ul class="sub">
-                        <li><a href="/Admin/AboutAdmin/Index">List About</a></li>
-                        <li><a href="/Admin/AboutAdmin/Create">Add About</a></li>
-                    </ul>
-                </li>
+
+
             </ul>
         </div>
         <!-- sidebar menu end-->
