--- a/FonSpa/FonSpa/Areas/Admin/Views/ContentAdmin/Create.cshtml
+++ b/FonSpa/FonSpa/Areas/Admin/Views/ContentAdmin/Create.cshtml
@@ -32,7 +32,7 @@
             <div class="col-lg-12">
                 <section class="panel">
                     <header class="panel-heading">
-                        Create New Content
+                        Create New Blog
                         <span class="tools pull-right">
                         </span>
                     </header>
@@ -46,7 +46,7 @@
                             {
                                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                                 <div class="form-group ">
-                                    <label class="control-label col-lg-3">Content Name</label>
+                                    <label class="control-label col-lg-3">Blog Name</label>
                                     <div class="col-lg-6">
                                         @*<input class="form-control " id="username" name="username" type="text">*@
                                         @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
