--- a/FonSpa/FonSpa/Areas/Admin/Views/ContentAdmin/Edit.cshtml
+++ b/FonSpa/FonSpa/Areas/Admin/Views/ContentAdmin/Edit.cshtml
@@ -32,7 +32,7 @@
             <div class="col-lg-12">
                 <section class="panel">
                     <header class="panel-heading">
-                        Edit Content
+                        Edit Blog
                         <span class="tools pull-right">
                         </span>
                     </header>
