--- a/FonSpa/FonSpa/Areas/Admin/Views/ContentCategoryAdmin/Create.cshtml
+++ b/FonSpa/FonSpa/Areas/Admin/Views/ContentCategoryAdmin/Create.cshtml
@@ -11,7 +11,7 @@
             <div class="col-lg-12">
                 <section class="panel">
                     <header class="panel-heading">
-                        Create New Content Category
+                        Create New Blog Category
                         <span class="tools pull-right">
                         </span>
                     </header>
@@ -25,7 +25,7 @@
                             {
                                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                                 <div class="form-group ">
-                                    <label class="control-label col-lg-3">Category Name</label>
+                                    <label class="control-label col-lg-3">Name</label>
                                     <div class="col-lg-6">
                                         @*<input class="form-control " id="username" name="username" type="text">*@
                                         @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
