--- a/FonSpa/FonSpa/Areas/Admin/Views/ContentCategoryAdmin/Edit.cshtml
+++ b/FonSpa/FonSpa/Areas/Admin/Views/ContentCategoryAdmin/Edit.cshtml
@@ -11,7 +11,7 @@
             <div class="col-lg-12">
                 <section class="panel">
                     <header class="panel-heading">
-                        Edit Content Category
+                        Edit Blog Category
                         <span class="tools pull-right">
                         </span>
                     </header>
