--- a/FonSpa/FonSpa/Views/Product/Index.cshtml
+++ b/FonSpa/FonSpa/Views/Product/Index.cshtml
@@ -87,7 +87,7 @@
                                     </span>
                                 </div>
 
-                                <a href="booking.html" class="link-item">
+                                <a href="/productdetail?id=@product.id" class="link-item">
                                     Buy now
                                 </a>
                             </div>
