--- a/FonSpa/FonSpa/Views/About/Index.cshtml
+++ b/FonSpa/FonSpa/Views/About/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model List<Models.Entity.About>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -19,10 +19,10 @@
             </li>
 
             @*<li>
-                <a href="#">
-                    Pages
-                </a>
-            </li>*@
+                    <a href="#">
+                        Pages
+                    </a>
+                </li>*@
 
             <li>
                 About Us
@@ -32,45 +32,52 @@
 </div>
 <!-- end Title Page -->
 <!-- our-story about-page -->
-<div class="sec--our-story--about-page">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 pb-5 pb-md-0 pr-md-4 pr-lg-5">
-                <div class="hun-element-image layout-1">
-                    <img src="/Asset/Client/images/single-image-06.jpg" alt="IMG">
-                </div>
-            </div>
-
-            <div class="col-md-6 pt-4 pt-md-0 align-self-center pl-md-4 pl-lg-5">
-                <div class="hun-element-our-story layout-2">
-                    <div class="heading-element">
-                        <h3 class="title-element">
-                            Our story
-                        </h3>
-
-                        <img class="line-heading" src="/Asset/Client/images/icons/wave-line-02.png" alt="IMG">
-                    </div>
-
-                    <div class="content-element">
-                        <strong class="strong-content">Lorem Ipsum is simply dummy text!</strong>
-
-                        Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui.
-                    </div>
-
-                    <div class="info-element">
-                        <div class="sign-element">
-                            <img src="/Asset/Client/images/icons/sign-01.png" alt="IMG">
+@foreach (var item in Model)
+{
+    if (item.name.Contains("Our Story"))
+    {
+        <div class="sec--our-story--about-page">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 pb-5 pb-md-0 pr-md-4 pr-lg-5">
+                        <div class="hun-element-image layout-1">
+                            <img src="@item.image" alt="IMG">
                         </div>
+                    </div>
 
-                        <div class="author-element">
-                            <span class="name-author">Brenda Rose</span> / Founder
+                    <div class="col-md-6 pt-4 pt-md-0 align-self-center pl-md-4 pl-lg-5">
+                        <div class="hun-element-our-story layout-2">
+                            <div class="heading-element">
+                                <h3 class="title-element">
+                                    @item.name
+                                </h3>
+
+                                <img class="line-heading" src="/Asset/Client/images/icons/wave-line-02.png" alt="IMG">
+                            </div>
+
+                            <div class="content-element">
+                                <strong class="strong-content">@item.metaTitle</strong>
+
+                                @item.description
+                            </div>
+
+                            <div class="info-element">
+                                <div class="sign-element">
+                                    <img src="/Asset/Client/images/icons/sign-01.png" alt="IMG">
+                                </div>
+
+                                <div class="author-element">
+                                    <span class="name-author">Brenda Rose</span> / Founder
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>
+    }
+}
+
 <!-- end our-story about-page -->
 <!-- testimonial home-1 -->
 <div class="sec--testimonial--home-1 parallax100" style="background-image: url('assets/images/bg-04.jpg');">
@@ -81,40 +88,33 @@
                     <div class="slide-ava js-call-slick" data-animate="true">
                         <div id="ava-tes-01" class="slide-slick" data-slick='{"asNavFor": "#text-tes-01", "centerMode": true, "centerPadding": "0px", "focusOnSelect": true, "fade": false, "speed": 500, "dots": false, "arrows": false, "autoplay": false, "autoplaySpeed": 5000, "infinite": true, "slidesToShow": 3, "slidesToScroll": 1}'>
 
-                            <div class="item-slick">
-                                <div class="wrap-ava">
-                                    <img src="/Asset/Client/images/ava-tes-01.jpg" alt="IMG">
-                                </div>
-                            </div>
-
-                            <div class="item-slick">
-                                <div class="wrap-ava">
-                                    <img src="/Asset/Client/images/ava-tes-02.jpg" alt="IMG">
-                                </div>
-                            </div>
-
-                            <div class="item-slick">
-                                <div class="wrap-ava">
-                                    <img src="/Asset/Client/images/ava-tes-04.jpg" alt="IMG">
-                                </div>
-                            </div>
-
-                            <div class="item-slick">
-                                <div class="wrap-ava">
-                                    <img src="/Asset/Client/images/ava-tes-03.jpg" alt="IMG">
-                                </div>
-                            </div>
+                            @foreach (var item in Model)
+                            {
+                                if (item.name.Contains("Testimonial"))
+                                {
+                                    <div class="item-slick">
+                                        <div class="wrap-ava">
+                                            <img src="@item.image" alt="IMG">
+                                        </div>
+                                    </div>
+                                }
+                            }
+                      
                         </div>
                     </div>
 
                     <div class="slide-text js-call-slick" data-animate="true">
                         <div id="text-tes-01" class="slide-slick" data-slick='{"asNavFor": "#ava-tes-01", "fade": true, "speed": 500, "dots": false, "arrows": false, "autoplay": false, "autoplaySpeed": 5000, "infinite": true, "slidesToShow": 1, "slidesToScroll": 1}'>
 
+                            @foreach (var item in Model)
+                            {
+                                if (item.name.Contains("Testimonial"))
+                                {
                             <div class="item-slick">
                                 <div class="content-tes" data-appear="fadeInUp" data-delay="0">
                                     <img class="mark-tes" src="/Asset/Client/images/icons/mark-tes-01.png" alt="IMG" data-appear="fadeInDown" data-delay="100">
 
-                                    “Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate”
+                                    @item.description
                                 </div>
 
                                 <div class="star-tes" data-appear="zoomIn" data-delay="600">
@@ -126,69 +126,15 @@
                                 </div>
 
                                 <div class="author-tes" data-appear="zoomIn" data-delay="1200">
-                                    <span class="name-author">Brenda Rose</span> / Photography
+                                    <span class="name-author">@item.metaTitle</span> / Photography
                                 </div>
                             </div>
+                                }
+                            }
 
-                            <div class="item-slick">
-                                <div class="content-tes" data-appear="fadeInUp" data-delay="0">
-                                    <img class="mark-tes" src="/Asset/Client/images/icons/mark-tes-01.png" alt="IMG" data-appear="fadeInDown" data-delay="100">
+                            
 
-                                    “Quis autem vel eum iure reprehenderit qui in ea voluptate. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?”
-                                </div>
-
-                                <div class="star-tes" data-appear="zoomIn" data-delay="600">
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                </div>
-
-                                <div class="author-tes" data-appear="zoomIn" data-delay="1200">
-                                    <span class="name-author">Christine Wells</span> / Photography
-                                </div>
-                            </div>
-
-                            <div class="item-slick">
-                                <div class="content-tes" data-appear="fadeInUp" data-delay="0">
-                                    <img class="mark-tes" src="/Asset/Client/images/icons/mark-tes-01.png" alt="IMG" data-appear="fadeInDown" data-delay="100">
-
-                                    “Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate”
-                                </div>
-
-                                <div class="star-tes" data-appear="zoomIn" data-delay="600">
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                </div>
-
-                                <div class="author-tes" data-appear="zoomIn" data-delay="1200">
-                                    <span class="name-author">Joan Hansen</span> / Photography
-                                </div>
-                            </div>
-
-                            <div class="item-slick">
-                                <div class="content-tes" data-appear="fadeInUp" data-delay="0">
-                                    <img class="mark-tes" src="/Asset/Client/images/icons/mark-tes-01.png" alt="IMG" data-appear="fadeInDown" data-delay="100">
-
-                                    “Ut enim ad minima veniam, nisi ut aliquid ex ea commodi consequatur, quis nostrum exercitationem ullam corporis suscipit laboriosam? Quis autem vel eum iure reprehenderit qui in ea voluptate”
-                                </div>
-
-                                <div class="star-tes" data-appear="zoomIn" data-delay="600">
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                </div>
-
-                                <div class="author-tes" data-appear="zoomIn" data-delay="1200">
-                                    <span class="name-author">Diana Henry</span> / Photography
-                                </div>
-                            </div>
+                          
                         </div>
                     </div>
                 </div>
