--- a/FonSpa/FonSpa/Views/Product/Index.cshtml
+++ b/FonSpa/FonSpa/Views/Product/Index.cshtml
@@ -73,21 +73,9 @@
                             </div>
 
                             <div class="foot-item">
-                                <div class="author-item">
-                                    <a href="#" class="pic-author">
-                                        <img src="/Asset/Client/images/ava-01.jpg" alt="IMG">
-                                    </a>
+                                
 
-                                    <span class="text-author">
-                                        <a href="#" class="name-author">
-                                            Victoria Webb
-                                        </a>
-
-                                        Spa Therapist
-                                    </span>
-                                </div>
-
-                                <a href="/productdetail?id=@product.id" class="link-item">
+                                <a style="margin:auto" href="/productdetail?id=@product.id" class="link-item">
                                     Buy now
                                 </a>
                             </div>
