--- a/FonSpa/FonSpa/Areas/Admin/Views/BookingAdmin/Edit.cshtml
+++ b/FonSpa/FonSpa/Areas/Admin/Views/BookingAdmin/Edit.cshtml
@@ -33,7 +33,7 @@
                                         <div class="col-lg-6">
                                             @*<input class="form-control " id="username" name="username" type="text">*@
 
-                                            <input required type="date" name="date" id="date" class="form-control" value="@Model.ArrivalTime.ToString("yyyy/MM/dd")" min="@DateTime.Now.ToString("yyyy/MM/dd")" max="@DateTime.Now.AddDays(7).ToString("yyyy/MM/dd")" />
+                                            <input required type="date" name="date" id="date" class="form-control"value="@DateTime.Now.ToString("yyyy/MM/dd")" min="@DateTime.Now.ToString("yyyy/MM/dd")" max="@DateTime.Now.AddDays(7).ToString("yyyy/MM/dd")" />
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -57,7 +57,9 @@
                                     <div class="form-group">
                                         <div class="col-lg-offset-3 col-lg-6">
                                             <button class="btn btn-primary" type="submit">Save</button>
-                                            <button class="btn btn-default" type="button">Cancel</button>
+                                            <form action="/Admin/BookingAdmin/Index">
+                                                <input class="btn btn-default" type="button" onclick="window.location.href = '/Admin/BookingAdmin/Index';" value="Cancel" />
+                                            </form>
                                         </div>
                                     </div>
                                 }
@@ -133,7 +135,9 @@
                                     <div class="form-group">
                                         <div class="col-lg-offset-3 col-lg-6">
                                             <button class="btn btn-primary" type="submit">Save</button>
-                                            <button class="btn btn-default" type="button">Cancel</button>
+                                            <form action="/Admin/BookingAdmin/Index">
+                                                <input class="btn btn-default" type="button" onclick="window.location.href = '/Admin/BookingAdmin/Index';" value="Cancel" />
+                                            </form>
                                         </div>
                                     </div>
                                 }
